# cf-deploy

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: deploy.yml
.pre_commit_hooks/: increment_version.py
cf_deploy/: main.py  models.py
cf_deploy/utils/: logging.py
examples/: processing_articles.yml
examples/stages/: prod.yml
