[tool.poetry]
name = "cf-deploy"
version = "0.1.34"
description = "A package to automate CloudFormation deployments"
authors = ["Bart Machielsen <bartmachielsen@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.20.0"
deepmerge = "^0.3.0"
PyYAML = "^5.4.1"
structlog = "^21.5.0"
colorama = "^0.4.4"
pydantic = "^1.9.0"
tqdm = "^4.65.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cf-deploy = "cf_deploy.main:main"
